feat(Module5 - backend -enhanced): Thêm flow cho attachment
1. Tạo thêm file V6 để thêm dinhkem này. Cập nhật file V5 để nó tự động tính toán average Rating cũng như reviewCount từ đầu.
2. Hoàn thiện flow:
- Thêm entity, repository, enum liên quan Attachment. Điều chỉnh lại DTO review, complaint có attachment
- Thêm logic service cho Attachment (Lưu file), điều chỉnh lại service Review, complaint thêm attachment.
- Thêm controller cho attachment, hoàn thiện lại controller cho review, complaint.
- Cấu hình config permit đường dẫn attachment.
- Thêm exception cho flow file để tách rõ lỗi lưu và validate.
- thêm Validation để validate cụ thể cho dữ liệu file gửi về